--- a/Flask_app/Templates/index.html
+++ b/Flask_app/Templates/index.html
@@ -22,7 +22,7 @@
                     <div class="col-md-7">
                         <!-- Left Content Box -->
                         <div class="box" style="padding-bottom: 20px;">
-                            <h3 class="title">Out put</h3>
+                            <h3 class="title">Output</h3>
                             <hr>
                             <!--out put -->
 
@@ -30,6 +30,7 @@
                             </div>
                             <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix
                                 errors then try again. </div>
+                            <h2> {{ prediction }}</h2>
                             <input type="hidden" value="" name="recaptchaResponse">
 
                         </div>
@@ -38,26 +39,29 @@
                         <!-- Right Content Box -->
                         <div class="box">
                             <h3 class="title">Input Data</h3>
-                              <div class="container">
+                            <div class="container">
                                 <div class="row" style="padding-bottom: 30px;">
                                     <div class="u-form u-form-1">
-                                        <form action="#" method="POST"
+                                        <form action="/" method="POST"
                                             class="u-clearfix u-form-spacing-15 u-form-vertical u-inner-form"
                                             style="padding: 0;" source="custom" name="form">
                                             <div class="u-form-email u-form-group u-form-group-1">
-                                                <label for="agel-f2a8"class="u-label u-text-palette-3-light-2 u-label-1">Your Age</label>
+                                                <label for="agel-f2a8"
+                                                    class="u-label u-text-palette-3-light-2 u-label-1">Your Age</label>
                                                 <input type="age" placeholder="Enter Your Age" id="age-f2a8" name="Age"
                                                     class="u-input u-input-rectangle u-palette-3-light-2" required="">
                                             </div>
                                             <div class="u-form-group u-form-name u-form-group-2">
                                                 <label for="childer-f2a8"
-                                                    class="u-label u-text-palette-3-light-2 u-label-2">No. of children</label>
+                                                    class="u-label u-text-palette-3-light-2 u-label-2">No. of
+                                                    children</label>
                                                 <input type="text" placeholder="No. of children " id="childer-f2a8"
-                                                    name="no. child" class="u-input u-input-rectangle u-palette-3-light-2"
-                                                    required="">
+                                                    name="no. child"
+                                                    class="u-input u-input-rectangle u-palette-3-light-2" required="">
                                             </div>
                                             <div class="u-form-group u-form-name u-form-group-2">
-                                                <label for="bmi-f2a8"class="u-label u-text-palette-3-light-2 u-label-2">BMI</label>
+                                                <label for="bmi-f2a8"
+                                                    class="u-label u-text-palette-3-light-2 u-label-2">BMI</label>
 
                                                 <input type="text" placeholder="BMI " id="bmi-f2a8" name="bmi"
                                                     class="u-input u-input-rectangle u-palette-3-light-2" required="">
@@ -69,9 +73,9 @@
                                                     Gender</label>
 
                                                 <select id="gender-f2a8" name="gender"
-                                                    class="u-input u-input-rectangle u-palette-3-light-2" required=">
-                                                <option value =" 0">Gender</option>
-                                                    <option value=" 1">Male</option>
+                                                    class="u-input u-input-rectangle u-palette-3-light-2" required="">
+
+                                                    <option value="1">Male</option>
                                                     <option value="2">Female</option>
                                                 </select>
                                             </div>
@@ -80,10 +84,10 @@
                                                     class="u-label u-text-palette-3-light-2 u-label-2">Smoker</label>
 
                                                 <select id="someker-f2a8" name="smoker"
-                                                    class="u-input u-input-rectangle u-palette-3-light-2" required=">
-                                               
-                                                <option value =" 0">Smoker</option>
-                                                    <option value=" 1">Yes</option>
+                                                    class="u-input u-input-rectangle u-palette-3-light-2" required="">
+
+
+                                                    <option value="1">Yes</option>
                                                     <option value="2">No</option>
                                                 </select>
                                             </div>
@@ -93,19 +97,20 @@
                                                     Region</label>
 
                                                 <select id="region-f2a8" name="region"
-                                                    class="u-input u-input-rectangle u-palette-3-light-2" required=">
-                                                
-                                                <option value =" 0">Regions</option>
+                                                    class="u-input u-input-rectangle u-palette-3-light-2" required="">
+
+                                                    <option value=" 0">Regions</option>
                                                     <option value="1">--Please Select Region--</option>
-                                                    <option value="1">South West</option>
-                                                    <option value="2">South East</option>
-                                                    <option value="3">North West</option>
-                                                    <option value="4">North East</option>
+                                                    <option value="1">Southwest</option>
+                                                    <option value="2">Southeast</option>
+                                                    <option value="3">Northwest</option>
+                                                    <option value="4">Northeast</option>
                                                 </select>
                                             </div>
                                             <div class="u-align-left u-form-group u-form-submit u-form-group-5">
-                                                <a href="#"
-                                                    class="u-border-2 u-border-palette-3-light-2 u-btn u-btn-rectangle u-btn-submit u-button-style u-none u-btn-1">Submit</a>
+                                                <input type="submit" value="Submit">
+                                                <!-- <a href="#"
+                                                    class="u-border-2 u-border-palette-3-light-2 u-btn u-btn-rectangle u-btn-submit u-button-style u-none u-btn-1">Submit</a> -->
                                             </div>
                                         </form>
                                     </div>
@@ -206,6 +211,30 @@
                             </section>
                         </div>
                     </nav>
+
+
+                    <div class='tableauPlaceholder' id='viz1607146604081' style='position: relative'><noscript><a
+                                href='#'><img alt=' '
+                                    src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;In&#47;InsuranceChargesforML&#47;AvgChargesbyRegionSmoking&#47;1_rss.png'
+                                    style='border: none' /></a></noscript><object class='tableauViz'
+                            style='display:none;'>
+                            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                            <param name='embed_code_version' value='3' />
+                            <param name='site_root' value='' />
+                            <param name='name' value='InsuranceChargesforML&#47;AvgChargesbyRegionSmoking' />
+                            <param name='tabs' value='no' />
+                            <param name='toolbar' value='yes' />
+                            <param name='static_image'
+                                value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;In&#47;InsuranceChargesforML&#47;AvgChargesbyRegionSmoking&#47;1.png' />
+                            <param name='animate_transition' value='yes' />
+                            <param name='display_static_image' value='yes' />
+                            <param name='display_spinner' value='yes' />
+                            <param name='display_overlay' value='yes' />
+                            <param name='display_count' value='yes' />
+                            <param name='language' value='en' />
+                            <param name='filter' value='publish=yes' /></object></div>
+                    <script
+                        type='text/javascript'>                    var divElement = document.getElementById('viz1607146604081'); var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 
                     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-2596">
                         <div class="u-clearfix u-sheet u-sheet-1">
