fixed code in the app.py file

--- a/Flask_app/Templates/index.html
+++ b/Flask_app/Templates/index.html
@@ -8,7 +8,7 @@
     <title>Final project</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="..\assets\styles.css">
+    <link rel="stylesheet" href="../assets/styles.css">
 </head>
 
 <body>
@@ -75,8 +75,8 @@
                                                 <select id="gender-f2a8" name="gender"
                                                     class="u-input u-input-rectangle u-palette-3-light-2" required="">
 
-                                                    <option value="1">Male</option>
-                                                    <option value="2">Female</option>
+                                                    <option value="1">male</option>
+                                                    <option value="2">female</option>
                                                 </select>
                                             </div>
                                             <div class="u-form-group u-form-name u-form-group-2">
@@ -87,8 +87,8 @@
                                                     class="u-input u-input-rectangle u-palette-3-light-2" required="">
 
 
-                                                    <option value="1">Yes</option>
-                                                    <option value="2">No</option>
+                                                    <option value="1">yes</option>
+                                                    <option value="2">no</option>
                                                 </select>
                                             </div>
                                             <div class="u-form-group u-form-name u-form-group-2">
@@ -101,10 +101,10 @@
 
                                                     <option value=" 0">Regions</option>
                                                     <option value="1">--Please Select Region--</option>
-                                                    <option value="1">Southwest</option>
-                                                    <option value="2">Southeast</option>
-                                                    <option value="3">Northwest</option>
-                                                    <option value="4">Northeast</option>
+                                                    <option value="1">southwest</option>
+                                                    <option value="2">southeast</option>
+                                                    <option value="3">northwest</option>
+                                                    <option value="4">northeast</option>
                                                 </select>
                                             </div>
                                             <div class="u-align-left u-form-group u-form-submit u-form-group-5">
