--- a/Flask_app/Templates/index.html
+++ b/Flask_app/Templates/index.html
@@ -139,7 +139,7 @@
                                                     <div
                                                         class="u-container-layout u-valign-middle u-container-layout-2">
                                                         <h2 class="u-text u-text-default u-text-1">Motion Chart
-                                                            VIsualizastion </h2>
+                                                            Visualization </h2>
                                                         <div class='tableauPlaceholder' id='viz1607136943704'
                                                             style='position: relative'><noscript><a href='#'><img
                                                                         alt=' '
@@ -183,7 +183,7 @@
                             <section class="u-align-center u-clearfix u-image u-shading u-section-3" src=""
                                 data-image-width="150" data-image-height="256" id="sec-5989">
                                 <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-                                    <h1 class="u-text u-text-default u-title u-text-1">Forecast VIsualizastion</h1>
+                                    <h1 class="u-text u-text-default u-title u-text-1">Forecast Visualization</h1>
                                     <!-- <img src="..\Resources\images\oo.jpg" style="width:200px;height:128px;"> -->
                                     <div class='tableauPlaceholder' id='viz1607136756628' style='position: relative'>
                                         <noscript><a href='#'><img alt=' '
