added prediction in index.html

--- a/Flask_app/templates/index.html
+++ b/Flask_app/templates/index.html
@@ -117,6 +117,7 @@
                             </div>
                             <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix
                                 errors then try again. </div>
+                                <h2> {{ prediction }}</h2>
                             <input type="hidden" value="" name="recaptchaResponse">
                         </div>
                     </div>
