--- a/Flask_app/templates/index.html
+++ b/Flask_app/templates/index.html
@@ -7,7 +7,7 @@
     <title>Final project</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="..\CSS\styles.css">
+    <link rel="stylesheet" href="../CSS/styles.css">
 </head>
 
 <body>
@@ -64,8 +64,8 @@
                                                         class="u-input u-input-rectangle u-palette-3-light-2"
                                                         required="">
                                                         <option value=" 0">Gender</option>
-                                                        <option value=" 1">Male</option>
-                                                        <option value="2">Female</option>
+                                                        <option value=" 1">male</option>
+                                                        <option value="2">female</option>
                                                     </select>
                                                 </div>
                                                 <div class="u-form-group u-form-name u-form-group-2">
@@ -77,8 +77,8 @@
                                                         required="">
 
                                                         <option value=" 0">Smoker</option>
-                                                        <option value=" 1">Yes</option>
-                                                        <option value="2">No</option>
+                                                        <option value=" 1">yes</option>
+                                                        <option value="2">no</option>
                                                     </select>
                                                 </div>
                                                 <div class="u-form-group u-form-name u-form-group-2">
@@ -90,15 +90,16 @@
                                                         class="u-input u-input-rectangle u-palette-3-light-2"
                                                         required="">
                                                         <option value="1">--Please Select Region--</option>
-                                                        <option value="1">SouthWest</option>
-                                                        <option value="2">SouthEast</option>
-                                                        <option value="3">NorthWest</option>
-                                                        <option value="4">NorthEast</option>
+                                                        <option value="1">southwest</option>
+                                                        <option value="2">southeast</option>
+                                                        <option value="3">northwest</option>
+                                                        <option value="4">northeast</option>
                                                     </select>
                                                 </div>
                                                 <div class="u-align-left u-form-group u-form-submit u-form-group-5">
-                                                    <a href="#"
-                                                        class="u-border-2 u-border-palette-3-light-2 u-btn u-btn-rectangle u-btn-submit u-button-style u-none u-btn-1">Submit</a>
+                                                    <input type="submit" value="Submit">
+                                                    <!-- <a href="#"
+                                                        class="u-border-2 u-border-palette-3-light-2 u-btn u-btn-rectangle u-btn-submit u-button-style u-none u-btn-1">Submit</a> -->
                                                 </div>
                                             </form>
                                         </div>
@@ -110,14 +111,14 @@
                     <div class="col-md-7">
                         <!-- Right Content Box -->
                         <div class="box" style="padding-bottom: 20px;">
-                            <h3 class="title">Out put</h3>
+                            <h3 class="title">Output</h3>
                             <!--out put -->
 
                             <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent.
                             </div>
                             <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix
                                 errors then try again. </div>
-                                <h2> {{ prediction }}</h2>
+                            <h2> {{ prediction }}</h2>
                             <input type="hidden" value="" name="recaptchaResponse">
                         </div>
                     </div>
@@ -130,7 +131,7 @@
                             data-image-width="100" data-image-height="256" id="sec-5989">
                             <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
                                 <h2 class="u-text u-text-default u-text-1">Motion Chart
-                                    VIsualizastion </h2>
+                                    Visualization </h2>
                                 <div class='tableauPlaceholder' id='viz1607136943704' style='position: relative'>
                                     <noscript><a href='#'><img alt=' '
                                                 src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Pr&#47;Project11_16071369267720&#47;Dashboard2&#47;1_rss.png'
@@ -150,7 +151,8 @@
                                         <param name='display_overlay' value='yes' />
                                         <param name='display_count' value='yes' />
                                         <param name='language' value='en' />
-                                        <param name='filter' value='publish=yes' /></object>
+                                        <param name='filter' value='publish=yes' />
+                                    </object>
                                 </div>
                                 <script type='text/javascript'>
                                     var divElement = document.getElementById('viz1607136943704');
@@ -171,66 +173,97 @@
                                     vizElement.parentNode.insertBefore(scriptElement, vizElement);               
                                 </script>
                             </div>
+                        </section>
                     </div>
+                </nav>
             </div>
-        </div>
-    </div>
-    </div>
-    </section>
-    </div>
-    </nav>
-    </div>
 
-    <div class="navigation">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="col-md-12">
-                <section class="u-align-center u-clearfix u-image u-shading u-section-3" src="" data-image-width="100"
-                    data-image-height="256" id="sec-5989">
-                    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-                        <h1 class="u-text u-text-default u-title u-text-1">Forecast VIsualizastion</h1>
-                        <!-- <img src="..\Resources\images\oo.jpg" style="width:200px;height:128px;"> -->
-                        <div class='tableauPlaceholder' id='viz1607136756628' style='position: relative'>
-                            <noscript><a href='#'><img alt=' '
-                                        src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Pr&#47;Project1_16071365628530&#47;Dashboard1&#47;1_rss.png'
-                                        style='border: none' /></a></noscript><object class='tableauViz'
-                                style='display:none;'>
-                                <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-                                <param name='embed_code_version' value='3' />
-                                <param name='site_root' value='' />
-                                <param name='name' value='Project1_16071365628530&#47;Dashboard1' />
-                                <param name='tabs' value='no' />
-                                <param name='toolbar' value='yes' />
-                                <param name='static_image'
-                                    value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Pr&#47;Project1_16071365628530&#47;Dashboard1&#47;1.png' />
-                                <param name='animate_transition' value='yes' />
-                                <param name='display_static_image' value='yes' />
-                                <param name='display_spinner' value='yes' />
-                                <param name='display_overlay' value='yes' />
-                                <param name='display_count' value='yes' />
-                                <param name='language' value='en' />
-                                <param name='filter' value='publish=yes' /></object></div>
-                        <script type='text/javascript'>
-                            var divElement = document.getElementById('viz1607136756628');
-                            var vizElement = divElement.getElementsByTagName('object')[0];
-                            if (divElement.offsetWidth > 800) {
-                                vizElement.style.width = '1450px';
-                                vizElement.style.minHeight = '587px'; vizElement.style.maxHeight = '887px';
-                                vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
-                            }
-                            else if (divElement.offsetWidth > 500) {
-                                vizElement.style.width = '2000px';
-                                vizElement.style.minHeight = '587px'; vizElement.style.maxHeight = '887px';
-                                vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
-                            }
-                            else { vizElement.style.width = '100%'; vizElement.style.height = '727px'; }
-                            var scriptElement = document.createElement('script');
-                            scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-                            vizElement.parentNode.insertBefore(scriptElement, vizElement);               
-                        </script>
+            <div class="navigation">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="col-md-12">
+                        <section class="u-align-center u-clearfix u-image u-shading u-section-3" src=""
+                            data-image-width="100" data-image-height="256" id="sec-5989">
+                            <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+                                <h1 class="u-text u-text-default u-title u-text-1">Forecast Visualization</h1>
+                                <!-- <img src="..\Resources\images\oo.jpg" style="width:200px;height:128px;"> -->
+                                <div class='tableauPlaceholder' id='viz1607136756628' style='position: relative'>
+                                    <noscript><a href='#'><img alt=' '
+                                                src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Pr&#47;Project1_16071365628530&#47;Dashboard1&#47;1_rss.png'
+                                                style='border: none' /></a></noscript><object class='tableauViz'
+                                        style='display:none;'>
+                                        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                                        <param name='embed_code_version' value='3' />
+                                        <param name='site_root' value='' />
+                                        <param name='name' value='Project1_16071365628530&#47;Dashboard1' />
+                                        <param name='tabs' value='no' />
+                                        <param name='toolbar' value='yes' />
+                                        <param name='static_image'
+                                            value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Pr&#47;Project1_16071365628530&#47;Dashboard1&#47;1.png' />
+                                        <param name='animate_transition' value='yes' />
+                                        <param name='display_static_image' value='yes' />
+                                        <param name='display_spinner' value='yes' />
+                                        <param name='display_overlay' value='yes' />
+                                        <param name='display_count' value='yes' />
+                                        <param name='language' value='en' />
+                                        <param name='filter' value='publish=yes' />
+                                    </object>
+                                </div>
+                                <script type='text/javascript'>
+                                    var divElement = document.getElementById('viz1607136756628');
+                                    var vizElement = divElement.getElementsByTagName('object')[0];
+                                    if (divElement.offsetWidth > 800) {
+                                        vizElement.style.width = '1450px';
+                                        vizElement.style.minHeight = '587px'; vizElement.style.maxHeight = '887px';
+                                        vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+                                    }
+                                    else if (divElement.offsetWidth > 500) {
+                                        vizElement.style.width = '2000px';
+                                        vizElement.style.minHeight = '587px'; vizElement.style.maxHeight = '887px';
+                                        vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+                                    }
+                                    else { vizElement.style.width = '100%'; vizElement.style.height = '727px'; }
+                                    var scriptElement = document.createElement('script');
+                                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+                                    vizElement.parentNode.insertBefore(scriptElement, vizElement);               
+                                </script>
+                            </div>
+                        </section>
                     </div>
-                </section>
+                </nav>
             </div>
-        </nav>
+
+            <div class='tableauPlaceholder' id='viz1607208327796' style='position: relative'><noscript><a href='#'><img
+                            alt=' '
+                            src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;In&#47;InsuranceChargesforML&#47;AvgChargesbyRegionSmoking&#47;1_rss.png'
+                            style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+                    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                    <param name='embed_code_version' value='3' />
+                    <param name='site_root' value='' />
+                    <param name='name' value='InsuranceChargesforML&#47;AvgChargesbyRegionSmoking' />
+                    <param name='tabs' value='no' />
+                    <param name='toolbar' value='yes' />
+                    <param name='static_image'
+                        value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;In&#47;InsuranceChargesforML&#47;AvgChargesbyRegionSmoking&#47;1.png' />
+                    <param name='animate_transition' value='yes' />
+                    <param name='display_static_image' value='yes' />
+                    <param name='display_spinner' value='yes' />
+                    <param name='display_overlay' value='yes' />
+                    <param name='display_count' value='yes' />
+                    <param name='language' value='en' />
+                    <param name='filter' value='publish=yes' /></object></div>
+                <script
+                    type='text/javascript'>                    
+                    var divElement = document.getElementById('viz1607208327796'); 
+                    var vizElement = divElement.getElementsByTagName('object')[0]; 
+                    vizElement.style.width = '100%';
+                    vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+                    var scriptElement = document.createElement('script'); 
+                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; 
+                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+                </script>
+
+            </div>
+        </div>  
         <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-2596">
             <div class="u-clearfix u-sheet u-sheet-1">
                 <p class="u-small-text u-text u-text-variant u-text-1">Dreamteam </p>
@@ -249,9 +282,6 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
-
-    </div>
-    </div>
 </body>
 
 </html>
