--- a/Flask_app/templates/index.html
+++ b/Flask_app/templates/index.html
@@ -14,7 +14,7 @@
     <div class="col-md-12">
         <div class="navigation">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="index.html">Title</a>
+                <a class="navbar-brand" href="index.html">Predicting Yearly Insurance Cost</a>
             </nav>
             <div class="container">
                 <div class="row">
@@ -22,7 +22,7 @@
                         <!-- Left Content Box -->
                         <div class="box" style="padding-bottom: 20px;">
                             <div class="box">
-                                <h3 class="title">Input Data</h3>
+                                <h3 class="title">User Input:</h3>
                                 <div class="container">
                                     <div class="row" style="padding-bottom: 30px;">
                                         <div class="u-form u-form-1">
@@ -63,9 +63,9 @@
                                                     <select id="gender-f2a8" name="gender"
                                                         class="u-input u-input-rectangle u-palette-3-light-2"
                                                         required="">
-                                                        <option value=" 0">Gender</option>
-                                                        <option value=" 1">Male</option>
-                                                        <option value="2">Female</option>
+                                                        <option value="0">Gender</option>
+                                                        <option value="male">male</option>
+                                                        <option value="female">female</option>
                                                     </select>
                                                 </div>
                                                 <div class="u-form-group u-form-name u-form-group-2">
@@ -76,9 +76,9 @@
                                                         class="u-input u-input-rectangle u-palette-3-light-2"
                                                         required="">
 
-                                                        <option value=" 0">Smoker</option>
-                                                        <option value=" 1">Yes</option>
-                                                        <option value="2">No</option>
+                                                        <option value="0">Smoker</option>
+                                                        <option value="yes">yes</option>
+                                                        <option value="no">no</option>
                                                     </select>
                                                 </div>
                                                 <div class="u-form-group u-form-name u-form-group-2">
@@ -89,17 +89,18 @@
                                                     <select id="region-f2a8" name="region"
                                                         class="u-input u-input-rectangle u-palette-3-light-2"
                                                         required="">
-                                                        <option value="1">--Please Select Region--</option>
-                                                        <option value="1">SouthWest</option>
-                                                        <option value="2">SouthEast</option>
-                                                        <option value="3">NorthWest</option>
-                                                        <option value="4">NorthEast</option>
+                                                        <option value="0">--Please Select Region--</option>
+                                                        <option value="southwest">southwest</option>
+                                                        <option value="southeast">southeast</option>
+                                                        <option value="northwest">northwest</option>
+                                                        <option value="northeast">northeast</option>
                                                     </select>
                                                 </div>
-                                                <div class="u-align-left u-form-group u-form-submit u-form-group-5">
+                                                <!-- <div class="u-align-left u-form-group u-form-submit u-form-group-5">
                                                     <a href="#"
                                                         class="u-border-2 u-border-palette-3-light-2 u-btn u-btn-rectangle u-btn-submit u-button-style u-none u-btn-1">Submit</a>
-                                                </div>
+                                                </div> -->
+                                                <input type="submit" value="Submit">
                                             </form>
                                         </div>
                                     </div>
@@ -110,13 +111,10 @@
                     <div class="col-md-7">
                         <!-- Right Content Box -->
                         <div class="box" style="padding-bottom: 20px;">
-                            <h3 class="title">Out put</h3>
+                            <h3 class="title">Output:</h3>
                             <!--out put -->
 
-                            <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent.
-                            </div>
-                            <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix
-                                errors then try again. </div>
+                            <h2> Your predicted yearly insurance cost is: ${{ prediction }}</h2>
                             <input type="hidden" value="" name="recaptchaResponse">
                         </div>
                     </div>
@@ -129,7 +127,7 @@
                             data-image-width="100" data-image-height="256" id="sec-5989">
                             <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
                                 <h2 class="u-text u-text-default u-text-1">Motion Chart
-                                    VIsualizastion </h2>
+                                    Visualization </h2>
                                 <div class='tableauPlaceholder' id='viz1607136943704' style='position: relative'>
                                     <noscript><a href='#'><img alt=' '
                                                 src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Pr&#47;Project11_16071369267720&#47;Dashboard2&#47;1_rss.png'
@@ -186,7 +184,7 @@
                 <section class="u-align-center u-clearfix u-image u-shading u-section-3" src="" data-image-width="100"
                     data-image-height="256" id="sec-5989">
                     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-                        <h1 class="u-text u-text-default u-title u-text-1">Forecast VIsualizastion</h1>
+                        <h1 class="u-text u-text-default u-title u-text-1">Forecast Visualization</h1>
                         <!-- <img src="..\Resources\images\oo.jpg" style="width:200px;height:128px;"> -->
                         <div class='tableauPlaceholder' id='viz1607136756628' style='position: relative'>
                             <noscript><a href='#'><img alt=' '
@@ -264,9 +262,9 @@
 
 
         <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-2596">
-            <div class="u-clearfix u-sheet u-sheet-1">
-                <p class="u-small-text u-text u-text-variant u-text-1">Dreamteam </p>
-            </div>
+            <div class="social-links">
+                <a href="https://github.com/hedeencharles/ML_final_project" class="fa fa-github"><i class="bx bxl-github"></i></a>
+              </div>
         </footer>
 
     </div>
